chupame los cocos vieja culiah

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <title>Lamejorpaginadelmundo</title>
 </head>
 <body>
+    <head>
+        <div>
+            <h1> Limp bizkit git</h1>
+        </div>
+    </head>
     <h1> Esta página fue bendecida por el bicho del Quini6</h1>
 
     <p class="pito"> hola, soy un texto </p>
