me duelen los cocos

--- a/index.html
+++ b/index.html
@@ -8,21 +8,20 @@
     <title>Lamejorpaginadelmundo</title>
 </head>
 <body>
-    <head>
+    <header>
         <div>
-            <h1> Limp bizkit git</h1>
+            <h1> Limp bizkit </h1>
         </div>
-    </head>
+    </header>
     <h1> Esta página fue bendecida por el bicho del Quini6</h1>
 
     <p class="pito"> hola, soy un texto </p>
 
     <h3> bienvenido a la mejor pagina del mundo</h3>
 
-    <nav>
-        <a href="./Pages/larengue.html">Presioná acá para ver algo asombroso</a>
-        <h3></h3>
-        <a href="./Pages/lenteja.html">Presioná acá para ver el mejor video del mundo</a>
+    <nav class="negrito">
+        <li><a href="./Pages/larengue.html">Presioná acá para ver algo asombroso</a></li>
+        <li><a href="./Pages/lenteja.html">Presioná acá para ver el mejor video del mundo</a></li>
         <p>Prohibido leer esto</p>
         <img src="./images/k3fp0xin4jq41.png" alt="">
      </nav>
