--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <nav class="negrito">
         <li><a href="./Pages/larengue.html">Presioná acá para ver algo asombroso</a></li>
         <li><a href="./Pages/lenteja.html">Presioná acá para ver el mejor video del mundo</a></li>
+        <li><a href="./Pages/noticias.html">Noticiones</a></li>
         <p>Prohibido leer esto</p>
         <img src="./images/k3fp0xin4jq41.png" alt="">
      </nav>
