--- a/index.html
+++ b/index.html
@@ -26,5 +26,51 @@
         <p>Prohibido leer esto</p>
         <img src="./images/k3fp0xin4jq41.png" alt="">
      </nav>
+
+     <aside class="">
+         <a href="https://sceu.frba.utn.edu.ar/"
+         target="blank"> <img src="images/aKVEzQJj_700wp_0.jpg" alt="DIOOOOOOOOOS"></a>
+     </aside>
+
+     <main>
+         <section id="contenedore">
+             <article class="primero">
+                 <figure>
+                     <div class="niggers">
+                         <h2>me pica el bolsillo</h2>
+                         <p>
+                             banana.banana.banana.banana.banana.banana.banana.banana.banana.banana.banana.banana.banana.banana.banana.banana.banana.banana.banana.banana.
+                         </p>
+                     </div>
+                 </figure>
+             </article>
+        
+             <section id="contenedore">
+                <article class="segundox">
+                    <figure>
+                        <div class="niggers">
+                            <h2>me sigue picando el bolsillo</h2>
+                            <p>
+                                banana.banana.banana.banana.banana.banana.banana.banana.banana.banana.banana.banana.banana.banana.banana.banana.banana.banana.banana.banana.
+                            </p>
+                        </div>
+                    </figure>
+                </article>
+
+     </main>
+
+     <footer class="footerino">
+         <div class="pepino">
+             <ul>
+                 <li>pablito clavo terrible clavito en un calvito, pobre calvito culiado.</li>
+                 <li>telefonox para dar las condolencias a la madre del calvito: <a href="tel=23546775098"></a></li>
+
+             </ul>
+         </div>
+         <div class="mapuu">
+             <iframe src="" frameborder="0"></iframe>
+         </div>
+
+     </footer>
 </body>
 </html>
